// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown zero diff inline autolink 19 1`] = `"<https://z0r.de/1729>"`;

exports[`markdown zero diff inline autolink empty 20 1`] = `"<>"`;

exports[`markdown zero diff inline code 8 1`] = `"\`console.log(\\"hello\\");\`"`;

exports[`markdown zero diff inline code empty 10 1`] = `"\`\`"`;

exports[`markdown zero diff inline code with text 9 1`] = `"Sentence with \`console.log(\\"hello\\");\` code inside of it"`;

exports[`markdown zero diff inline emphasis 2 1`] = `"*italics*"`;

exports[`markdown zero diff inline emphasis empty 3 1`] = `"**"`;

exports[`markdown zero diff inline hardbreak 7 1`] = `
"some line\\\\
next line"
`;

exports[`markdown zero diff inline image bold italics label 26 1`] = `"![***diplo***]()"`;

exports[`markdown zero diff inline image bold label 24 1`] = `"![**diplo**]()"`;

exports[`markdown zero diff inline image empty 27 1`] = `"![]()"`;

exports[`markdown zero diff inline image italics label 25 1`] = `"![*diplo*]()"`;

exports[`markdown zero diff inline image label 23 1`] = `"![diplo]()"`;

exports[`markdown zero diff inline image label src 22 1`] = `"![diplo](logo/diplo.png)"`;

exports[`markdown zero diff inline image label src title 21 1`] = `"![diplo](logo/diplo.png \\"diplodoc\\")"`;

exports[`markdown zero diff inline link bold italics label 17 1`] = `"[***text***]()"`;

exports[`markdown zero diff inline link bold label 15 1`] = `"[**text**]()"`;

exports[`markdown zero diff inline link empty 18 1`] = `"[]()"`;

exports[`markdown zero diff inline link italics label 16 1`] = `"[*text*]()"`;

exports[`markdown zero diff inline link label 14 1`] = `"[text]()"`;

exports[`markdown zero diff inline link label href 13 1`] = `"[text](folder/file.md)"`;

exports[`markdown zero diff inline link label href title 11 1`] = `"[text](folder/file.md \\"title\\")"`;

exports[`markdown zero diff inline link label href title with " inside 12 1`] = `"[text](folder/file.md 'title: \\"quote\\"')"`;

exports[`markdown zero diff inline softbreak 6 1`] = `
"some line
next line"
`;

exports[`markdown zero diff inline strong emphasis + emphasis 5 1`] = `"***bold italics***"`;

exports[`markdown zero diff inline strong emphasis 4 1`] = `"**bold**"`;

exports[`markdown zero diff inline text 0 1`] = `"line of text"`;

exports[`markdown zero diff inline text empty 1 1`] = `""`;
